<resources>
    <string name="app_name">CookBook</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Closed menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="step_message">%1$s %2$s\n</string>
    <string name="minuti">minutes</string>
    <string name="secondi">seconds</string>
    <string name="start_button">start</string>
    <string name="stop_button">stop</string>
    <string name="timer_value">timer_value</string>
    <string name="channel_description">channel_description</string>
    <string name="done">Done</string>
    <string name="nome_ricetta">Name Recipe</string>
    <string name="descrizione">Description</string>
    <string name="livello">Level of difficulty</string>
    <string name="categoria">Category</string>
    <string name="durata">Time in minutes</string>
    <string name="ingredienti">Ingredients</string>
    <string name="aggiungi_ingrediente">Add ingredients</string>
    <string name="steps">Steps</string>
    <string name="aggiungi_step">Add steps</string>
    <string name="seleziona_allergeni">Select allergen</string>
    <string name="aggiungi">Add</string>
    <string name="quantita_ingrediente">Quantity</string>
    <string name="nome_ingrediente">Name</string>
    <string name="delete_button">delete_button</string>
    <string name="number_step">0</string>
    <string name="descrizione_step">Description</string>
    <string name="difficolta">Category</string>
    <string name="time_timer">00:00</string>
    <string name="recently_made">Recently Modified</string>
    <string name="view_all_recipes">View all recipes</string>
    <string name="descr_my_recipes">Descr my recipes</string>
    <string name="create_new_recipe">Create new recipe</string>
    <string name="add_recipe">Add recipe</string>
    <string name="descr_add_recipe">descr add</string>
    <string name="my_recipes">My recipes</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_recipes">My Recipes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="profile_image">prof_im</string>
    <string name="complete">Completed:</string>
    <string name="description">Description:</string>
    <string name="prep_time">Time of preparation:</string>
    <string name="difficult">Difficulty:</string>
    <string name="category">Category:</string>
    <string name="instruction">Steps:</string>
    <string name="ingredient">Ingredients:</string>
    <string name="allerg">Allergens:</string>
    <string name="my_profile">My profile</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="istruzione">step</string>
    <string name="textview">TextView</string>
    <string name="_1">1.</string>
    <string name="informazioni_base">Base information</string>
    <string name="detail">Details</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="filtri">Filters</string>
    <string name="zero_ricette">0 recipes</string>
    <string name="filtra_per_durata_massima">Filter by maximum duration:</string>
    <string name="min">-- min</string>

    <plurals name="numero_ricette">
        <item quantity="one">%d recipe</item>
        <item quantity="other">%d recipes</item>
    </plurals>


</resources>