<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Titolo della ricetta -->
        <TextView
            android:id="@+id/nomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <!-- Completamenti Ricetta -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">

            <!-- Titolo -->
            <TextView
                android:id="@+id/completamentiRicetta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete"
                android:textStyle="bold"
                android:paddingStart="1dp"
                android:paddingEnd="8dp" />

            <!-- Contenuto -->
            <TextView
                android:id="@+id/numeroCompletamenti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />
        <!-- Descrizione -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">

            <!-- Titolo -->
            <TextView
                android:id="@+id/descrizioneTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                android:paddingStart="1dp"
                android:paddingEnd="8dp" />

            <!-- Contenuto -->
            <TextView
                android:id="@+id/descrizioneContentTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <!-- Tempo di preparazione -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">

            <!-- Titolo -->
            <TextView
                android:id="@+id/durataTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prep_time"
                android:textStyle="bold"
                android:paddingStart="1dp"
                android:paddingEnd="8dp" />

            <!-- Contenuto -->
            <TextView
                android:id="@+id/durataContentTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <!-- Difficoltà -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">

            <!-- Titolo -->
            <TextView
                android:id="@+id/difficoltaTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficult"
                android:textStyle="bold"
                android:paddingStart="1dp"
                android:paddingEnd="8dp" />

            <!-- Contenuto -->
            <TextView
                android:id="@+id/difficoltaContentTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <!-- Categoria -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">

            <!-- Titolo -->
            <TextView
                android:id="@+id/categoriaTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textStyle="bold"
                android:paddingStart="1dp"
                android:paddingEnd="8dp" />

            <!-- Contenuto -->
            <TextView
                android:id="@+id/categoriaContentTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <!-- Istruzioni -->
        <TextView
            android:text="@string/instruction"
            android:textSize="17sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:id="@+id/stepListLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <!-- Ingredienti -->
        <TextView
            android:text="@string/ingredient"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="5dp" />

        <!-- Lista degli ingredienti -->
        <LinearLayout
            android:id="@+id/ingredientListLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <!-- Allergeni -->
        <TextView
            android:text="@string/allerg"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:id="@+id/allergeniLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />
    </LinearLayout>
</ScrollView>